Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-60066

Seeing errors in memcached log 'DcpProducer::handleResponse disconnecting for opcode:DCP_DELETION,status:Too large

    XMLWordPrintable

Details

    Description

      Steps:

      • Two node KV cluster
      • Load docs using transactions

      Observation:

      Seeing following error logs in the memcached logs

       

      172.23.217.69 ::/opt/couchbase/var/lib/couchbase/logs/memcached.log.000003.txt
       
      2023-12-11T02:39:54.259361-08:00 ERROR 63: (default) DCP (Producer) eq_dcpq:replication:ns_1@172.23.217.69->ns_1@172.23.217.67:default - DcpProducer::handleResponse disconnecting, received unexpected response:{"bodylen":0,"cas":0,"datatype":"raw","extlen":0,"keylen":0,"magic":"ClientResponse","opaque":282,"opcode":"DCP_DELETION","status":"Too large"} for stream:stream name:eq_dcpq:replication:ns_1@172.23.217.69->ns_1@172.23.217.67:default, vb:791, state:in-memory
       
      2023-12-11T02:39:56.597386-08:00 ERROR 115: (default) DCP (Producer) eq_dcpq:replication:ns_1@172.23.217.69->ns_1@172.23.217.67:default - DcpProducer::handleResponse disconnecting, received unexpected response:{"bodylen":0,"cas":0,"datatype":"raw","extlen":0,"keylen":0,"magic":"ClientResponse","opaque":54,"opcode":"DCP_DELETION","status":"Too large"} for stream:stream name:eq_dcpq:replication:ns_1@172.23.217.69->ns_1@172.23.217.67:default, vb:563, state:in-memory

       

      TAF test:

       

      Atomicity.basic_ops.basic_ops:
          test_large_doc_size_commit,nodes_init=2,replicas=1,num_items=100,doc_size=2048000,transaction_commit=True,bucket_type=ephemeral,bucket_size=2048,op_type=create;update;delete,transaction_timeout=30,durability=MAJORITY,process_concurrency=1

       

       

      Attachments

        1. dcp_err_67.pcap.zip
          586 kB
        2. dcp_error.pcap.zip
          606 kB
        3. dcpErr_Trans1.2.3_sdk3.4.2.pcap.zip
          540 kB
        4. Screenshot 2023-12-12 at 13.54.32.png
          Screenshot 2023-12-12 at 13.54.32.png
          193 kB
        5. Screenshot 2023-12-13 at 13.24.40.png
          Screenshot 2023-12-13 at 13.24.40.png
          23 kB
        6. test_run.log
          5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ashwin.govindarajulu Ashwin Govindarajulu
            ashwin.govindarajulu Ashwin Govindarajulu
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty