MB-60066: Tolerate DCP deletions with value larger than 1MiB

Subdoc CreateWithDelete can legitimately create a user xattr that
exceeds 1MiB, yet the DCP validation expects deletes to only come
with <= 1MiB of value.

Change the incorrect validation, now matches dcp_mutation.cc checks

Change-Id: I9863495db104ca10f8d651f61ee68a844055a027
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/202507
Well-Formed: Restriction Checker
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>
Tested-by: Jim Walker <jim@couchbase.com>